[project]
name = "archipylago"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "openai>=1.43.0",
    "pandas>=2.2.2",
    "pydantic>=2.8.2",
    "python-dotenv>=1.0.1",
]
